2002-05-18  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* mime-play.el (mime-activate-mailcap-method): Don't use
	`binary-to-text-funcall'. (Thanks to TANAKA Shingo)
	
2003-12-14  Tatsuya Kinoshita  <tats@vega.ocn.ne.jp>

	* mime-edit.el (mime-charset-type-list): Add entry for iso-8859-1[45].

2003-12-12  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mime-edit.el (mime-edit-user-agent-value): Add a setting for
	XEmacs CHISE.

2003-12-07  Yuuichi Teranishi  <teranisi@gohome.org>

	* mime-play.el (mime-require-safe-directory): Check the owner of the
	directory if it already exists.

2003-12-06  Yuuichi Teranishi  <teranisi@gohome.org>

	* mime-play.el 	(mime-require-safe-directory): New function.
	(mime-store-message/partial-piece): Use it.

2003-12-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mime-play.el (mime-store-message/partial-piece): Fix
	mis-designed parenthesis in the `let' form.

2001-11-27  Daiki Ueno  <ueno@unixuser.org>

	* mime-w3.el: Don't use `url-register-protocol' if it is not
	fboundp; announce `url-cid' feature instead.
	[cf. <Wanderlust:8566>]

	(url-cid): Change return value for the current URL package.

2003-06-09  Yuuichi Teranishi  <teranisi@gohome.org>

	* pgg-gpg.el (pgg-gpg-process-region): Undo the last change;
	Add --yes option to overwrite existing output file;
	Remove needless set-default-file-modes.

2003-05-29  Yuuichi Teranishi  <teranisi@gohome.org>

	* pgg-gpg.el (pgg-gpg-process-region): Undo the last change.

2003-05-15  Yuuichi Teranishi  <teranisi@gohome.org>

	* pgg-gpg.el (pgg-gpg-process-region): Use `make-temp-file' instead of
	`make-temp-name'.

	* pgg-pgp5.el (pgg-pgp5-process-region): Ditto.
	(pgg-scheme-verify-region): Ditto.
	(pgg-scheme-snarf-keys-region): Ditto.

	* pgg-pgp.el (pgg-pgp-process-region): Ditto.
	(pgg-scheme-verify-region): Ditto.
	(pgg-scheme-snarf-keys-region): Ditto.

	* smime.el (smime-process-region): Ditto.
	(smime-verify-region): Ditto.
